--- a/css/style.css
+++ b/css/style.css
@@ -748,6 +748,10 @@ a.selected {
   color: var(--title-color);
 }
 
+.project-example.fontsize-2 p {
+  font-size: 16px;
+}
+
 .middle-project {
   width: 12px;
 }
@@ -756,6 +760,10 @@ a.selected {
   display: flex;
   flex-direction: row;
   margin: 6px;
+}
+
+.example-text.more-details {
+  width: 100%;
 }
 
 .example-box.invert {
